# Proof-Carrying-Scheduler-for-Heterogeneous-AI-Compute

./: .gitignore  HANDOFF.md  README.md  TASK.md  commander.cmd  commander.toml
LangGraph-Commander/: CHANGELOG.md  Cargo.toml  README.md  start.ps1
LangGraph-Commander/crates/lgc-cli/: Cargo.toml
LangGraph-Commander/crates/lgc-cli/src/: main.rs
LangGraph-Commander/crates/lgc-core/: Cargo.toml
LangGraph-Commander/crates/lgc-core/src/: config.rs  lib.rs  runtime.rs
LangGraph-Commander/crates/lgc-provider-openai/: Cargo.toml
LangGraph-Commander/crates/lgc-provider-openai/src/: lib.rs
LangGraph-Commander/crates/lgc-supervisor/: Cargo.toml
LangGraph-Commander/crates/lgc-supervisor/src/: lib.rs
LangGraph-Commander/crates/lgc-tui/: Cargo.toml
LangGraph-Commander/crates/lgc-tui/src/: lib.rs
LangGraph-Commander/scripts/: coordination_bridge.py  worker_bridge.py
api/: HANDOFF.md  README.md  TASK.md
internal/evidence/: HANDOFF.md  README.md  TASK.md  constraint-evals.md  evidence-emission.md
internal/scheduler/: HANDOFF.md  README.md  TASK.md  decision-flow.md  scoring.md
internal/state/: .gitignore  HANDOFF.md  README.md  TASK.md
internal/state/fixtures/: README.md  mixed_cpu_gpu.v1.snapshot.json  topology_multi_zone.v1.snapshot.json  unknown_fault_domain_ref.v1.snapshot.invalid.json  unknown_node_ref.v1.snapshot.invalid.json
internal/state/tools/: canonical_hash.py  normalize_snapshot.py  validate_snapshot.py  (+1 more)
proofs/: HANDOFF.md  README.md  TASK.md  claim-traceability.md  week-1-scope.md
proofs/placeholders/: BOUND.RELATIVE_GAP_REPORTING.md  LIVENESS.CONDITIONAL_COMPLETION.md  SAFETY.RESOURCE_CAPACITY.md  VERIFY.BUNDLE_SOUNDNESS.md  VERIFY.CONFLICT_SOUNDNESS.md
proofs/tla+/: ASSUMPTIONS.md  EvidenceChain.cfg  EvidenceChain.tla  README.md
scripts/: bootstrap-local-repo.ps1  new-module-worktree.ps1
scripts/commander/: check_handoffs.ps1
spec/: HANDOFF.md  README.md  TASK.md  canonical-json.md  claim-lifecycle.md  claim-taxonomy.md  contract-changelog-template.md  contract-packet.md  decision-bundle.md  snapshot-contract.md  verification-report.md
spec/examples/: decision-bundle.minimal.json
verifier/: HANDOFF.md  README.md  TASK.md  claim-matrix.md  claim-reporting.md  issue-codes.md  verification-stages.md
(+1 files in other folders)
