[workspace]
members = [
  "crates/lgc-cli",
  "crates/lgc-core",
  "crates/lgc-supervisor",
  "crates/lgc-tui",
  "crates/lgc-provider-openai",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.2.0"
license = "MIT"
authors = ["Peter + Codex"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync"] }
toml = "0.8"
uuid = { version = "1.15", features = ["v4"] }
wait-timeout = "0.2"
