[package]
name = "lgc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true

lgc-supervisor = { path = "../lgc-supervisor" }
lgc-core = { path = "../lgc-core" }
